node-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: karanbalkar90/examplenodejsapp-dev:17
          ports:
            - containerPort: 3000
