node-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okaygeniesuper
spec:
  selector:
    app: okaygeniesuper
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
