node-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: sample-nodejs-app
  name: ingress-superadmin
  namespace: default
spec:
  defaultBackend: null
  ingressClassName: nginx
  rules:
    - host: apiv6.localginie.com
      http:
        paths:
          - backend:
              port:
                number: 80
              service:
                name: okaygeniesuper
            path: /
            pathType: Prefix
  service:
    name: okaygeniesuper
    port:
      number: 80
